FindBugs scrub